fix: spacing in subtitle

--- a/assets/style.css
+++ b/assets/style.css
@@ -423,7 +423,7 @@ body {
 .main-subtitle {
     font-size: 24px;
     font-weight: 500;
-    margin-bottom: 16px;
+    margin-top: 32px;
     text-align: center;
     margin-bottom: 32px;
 }
